--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -1,5 +1,4 @@
-name: Build, Push, and Deploy Django to ECS..
-
+name: Build, Push, and Deploy Django to ECS.
 on:
   push:
     branches: [ "main" ]
