--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -1,23 +1,24 @@
-name: Build, Push, and Deploy Django to ECS.
+name: Build, Push, and Deploy to ECS
+
 on:
   push:
     branches: [ "main" ]
 
 env:
   AWS_REGION: ap-south-1
-  ECR_REPOSITORY: 767397940350.dkr.ecr.ap-south-1.amazonaws.com/gts/gts_django
-  IMAGE_TAG: latest
+  ECR_REPOSITORY_URI: 767397940350.dkr.ecr.ap-south-1.amazonaws.com/gts/django-service 
   ECS_CLUSTER_NAME: gts-node-cluster
   ECS_SERVICE_NAME: gts-django-service-task-service-unqq6zcg 
-  IAM_ROLE_ARN: arn:aws:iam::767397940350:role/gts-django-git-ecs-deploy-role
-
+  ECS_TASK_DEFINITION: task-definition.json
+  CONTAINER_NAME: gts-django-container
+  
 permissions:
-  id-token: write   
-  contents: read 
+  id-token: write 
+  contents: read  
 
 jobs:
-  build-and-push:
-    name: Build and Push to ECR
+  build-and-deploy:
+    name: Build, Push, and Deploy
     runs-on: ubuntu-latest
     
     steps:
@@ -27,38 +28,34 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ env.IAM_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::767397940350:role/gts-django-service-git-deploy-role # <-- Use your Django deploy role
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         
-
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         run: |
-          # This command now builds, tags, and pushes the Django image
-          docker build -t ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
-          docker push ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-
-
-  deploy-to-ecs:
-    name: Deploy to ECS Fargate
-    runs-on: ubuntu-latest
-    needs: build-and-push  
-    
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+          docker build -t $ECR_REPOSITORY_URI:latest .
+          docker push $ECR_REPOSITORY_URI:latest
+          # This line outputs the new image URI for the next step
+          echo "image=$ECR_REPOSITORY_URI:latest" >> $GITHUB_OUTPUT
+          
+      - name: Render new task definition
+        id: render-task
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          role-to-assume: ${{ env.IAM_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
-          
-      - name: Force new deployment on ECS
-        id: force-deploy
-        run: |
-          echo "Forcing new deployment of service: ${{ env.ECS_SERVICE_NAME }} in cluster: ${{ env.ECS_CLUSTER_NAME }}"
-          
-          # This command now targets the Django service
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER_NAME }} --service ${{ env.ECS_SERVICE_NAME }} --force-new-deployment
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ steps.build-image.outputs.image }}
+
+      - name: Deploy new task definition to ECS
+        id: deploy-task
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE_NAME }}
+          cluster: ${{ env.ECS_CLUSTER_NAME }}
+          wait-for-service-stability: true
